# QT

caloryCounter/: CMakeLists.txt  person.cpp  person.h  widget.cpp  widget.h  widget.ui
guessANumber/: widget.cpp  widget.h  widget.ui
